# matsprak-2023

./: CMakeLists.txt  README.md
demo/: test-comptime.msk  test1.msp
lib/: CMakeLists.txt
src/: AstNode.cpp  ast.cpp  ast.h  astgrouping.cpp  astgrouping.h  astmodule.h  asttreelookup.cpp  asttreelookup.h  codegenerator.cpp  codegenerator.h  error.h  file.cpp  file.h  lexer.h  main.cpp  module.h  parser.cpp  parser.h  stringmap.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h  tokentreelookup.h  tokentype.h
src/vm/: struct.h
test/: CMakeLists.txt  ast_test.cpp  asttreelookup_test.cpp  codegen_test.cpp  parser_test.cpp  testfile.h  tokenizer_test.cpp  tokentreelookup_test.cpp
